# kvs-hashing

./: Cargo.toml
app-server/: Program.cs  app-server.csproj  app-server.http  app-server.sln
app-server/Controllers/: ServeController.cs
app-server/Properties/: launchSettings.json
app-server/Services/: FileContentService.cs  IContentService.cs
app-server/content/: file1.json  file2.json
cache-server/: applicationService.go  cache.go  go.mod  main.go
hash-server/: Cargo.toml  Dockerfile
hash-server/src/: hash_ring.rs  main.rs  server_location_service.rs
